# QtComs

./: .gitignore  CMakeLists.txt  QtComs.pro  RTI-Dome.cpp  RTI-Dome.h  TCPPort.cpp  TCPPort.h  UDPPort.cpp  UDPPort.h  deviceAccess.cpp  deviceAccess.h  main.cpp  pegasus.cpp  pegasus.h  serialPort.cpp  serialPort.h
